--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/viewpager": "^4.1.3",
     "react": "16.13.1",
     "react-native": "0.63.2"
   },
@@ -21,6 +22,7 @@
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
+    "react-devtools": "^4.8.2",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
