--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@react-native-community/viewpager": "^4.1.3",
     "@react-navigation/native": "^5.7.2",
     "@react-navigation/stack": "^5.8.0",
+    "@reduxjs/toolkit": "^1.4.0",
     "axios": "^0.19.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
-    "react-native-screens": "^2.9.0"
+    "react-native-screens": "^2.9.0",
+    "react-redux": "^7.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
